clusters/talos-cluster/nabu/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nabu-route
  namespace: nabu
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: gateway
  hostnames:
    - "nabu.horus.maix.ovh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nabu-service
          port: 80
